# DNS-Relay

./: CMakeLists.txt  README.md  auto.bat  auto.sh  thread_test.py
include/: cache.h  console.h  file.h  hash.h  host.h  list.h  main.h  map.h  protocol.h  server.h
include/utils/: hash.h  list.h  map.h
src/: console.c  main.c  test.c
src/Server/: basic.c  console.c  map.c  packet.c  query.c  socket.c  thread.c  url.c
src/Service/: cache.c  host.c  inet.c  list.c  packet.c  query.c  test.c  url.c
src/Utils/: cache  cache.c  file.c  hash.c  hash_example  hash_for_DNS  hash_for_DNS.c  hash_list.c  inet.c  list  thread.c
